[gd_scene load_steps=6 format=3 uid="uid://bqx7ufn8dkp4w"]

[ext_resource type="Script" path="res://scripts/Portal.gd" id="1_portal"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_portal"]
albedo_color = Color(0, 0.5, 1, 0.8)
emission_enabled = true
emission = Color(0, 0.3, 0.8, 1)
transparency = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1"]
height = 0.2
top_radius = 1.0
bottom_radius = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 1.2
height = 2.4

[node name="Portal" type="Area3D"]
script = ExtResource("1_portal")

[node name="PortalMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
mesh = SubResource("CylinderMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_portal")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CylinderShape3D_1")

[node name="PortalRing" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("SphereMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_portal")

[node name="PortalLight" type="OmniLight3D" parent="."]
light_energy = 1.0
light_color = Color(0, 0.5, 1, 1)
omni_range = 3.0
